# SplatNav

./: .gitignore  .gitmodules  README.md  setupvm.bash
docker/: Dockerfile  Dockerfile.gaussmi_lean  docker-compose.yml  setup-x11.sh
relay/: protocol.py
relay/ros1/: gaussmi_ros1_relay.py
ros2_ws/: justfile
ros2_ws/src/gaussmi_relay/: package.xml  setup.cfg  setup.py
ros2_ws/src/gaussmi_relay/gaussmi_relay/: ros2_side.py
ros2_ws/src/spin_robot_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/spin_robot_node/config/: nav2_nbv_params.yaml
ros2_ws/src/spin_robot_node/launch/: clearpath_nav2_nbv.launch.py  nav2_nbv_demo.launch.py
ros2_ws/src/spin_robot_node/spin_robot_node/: nbv_nav2_bridge.py  spin_robot_node.py
