<?xml version="1.0"?>
<package format="3">
  <name>gaussmi_relay</name>
  <version>0.0.1</version>
  <description>Socket relay between ROS 2 Jazzy and ROS 1 GauSS-MI.</description>
  <maintainer email="sdeshmu4@example.com">GitHub Copilot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
